# saurron

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: coverage.yml  docker.yml  docs-gh-pages.yml  rust.yml
docs/: .gitignore  .prettierrc.json  TODO.md  _config.yml  design.md  implementation-plan.md  implementation-progress.md  index.md
docs/.devcontainer/: Dockerfile  Gemfile  devcontainer.json  local-jekyll-serve.sh
docs/collections/_development/: architecture.md
docs/collections/_reference/: config-reference.md  http-api.md
docs/collections/_start/: configuration.md  quickstart.md  what.md
src/: audit.rs  cli.rs  config.rs  docker.rs  http.rs  lib.rs  main.rs  metrics.rs  notifications.rs  registry.rs  scheduler.rs  selfupdate.rs  update.rs
tests/: integration.rs
