[package]
name = "saurron"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1"
axum = "0.7"
bollard = "0.17"
clap = { version = "4", features = ["derive", "env"] }
config = { version = "0.14", default-features = false, features = ["toml"] }
lettre = { version = "0.11", default-features = false }
minijinja = "2"
prometheus = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rumqttc = "0.24"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
proptest = "1"
