[package]
name = "saurron"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = "0.4"
cron = "0.16"
futures = "0.3"
bollard = { version = "0.20", features = ["ssl"] }
clap = { version = "4", features = ["derive", "env"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport", "ring"] }
minijinja = "2"
prometheus = "0.14"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "query"] }
rumqttc-next = "0.30.0"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-logfmt = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
proptest = "1"
testcontainers = "0.27"
